Initiating the final touches

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": "next/core-web-vitals",
+  "ignorePatterns": [
+      ".eslintrc.js",
+      "node_modules/",
+      "next.config.js",
+      "next-env.d.ts",
+      "./public/js"
+  ],
+  "rules": {
+      "@next/next/no-img-element": "off",
+      "jsx-a11y/alt-text": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "indent": ["error", 2],
+      "linebreak-style": "off",
+      "quotes": ["error", "single"],
+      "semi": ["error", "never"],
+      "comma-dangle": ["error", "never"]
+  }
 }
